Finish webpage Set up of flexbox Still issues with the stretching on full screen and scaling

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     padding: 0;
-    max-width: 1200px;
     margin:0px auto;
 }
 
@@ -12,7 +11,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding: 16px 80px;
     background-color: lightpink;
 }
 
@@ -37,10 +36,9 @@ ul {
 
 .section1 {
     background-color: rgb(255, 204, 212);
-    padding: 16px;
+    padding: 16px 80px;
     display: flex;
-    justify-content: center;
-    gap: 16px;
+    justify-content: space-between;
 }
 
 h2 {
@@ -65,9 +63,13 @@ button {
     border-radius: 8px;
     border: none;
     color: whitesmoke;
+    flex: none;
+    height: fit-content;
+    width:fit-content;
 }
 
-img {
+.section1 img {
+    margin-left: 8px;
     height: auto;
     width: 300px;
 }
@@ -77,7 +79,7 @@ img {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding: 24px 80px;
 }
 
 h4 {
@@ -87,9 +89,82 @@ h4 {
 }
 
 .subsectionD {
+    margin-top: 40px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
+}
+
+.img {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 16px;
+}
+
+.img img {
+    min-width: 150px;
+    min-height: 150px;
+    border: solid 2px rgb(114, 64, 114);
+    border-radius: 8px;
+}
+
+.subtext {
+    margin: 4px;
+    font-size: 16px;
+    font-weight: lighter;
+    color:rgb(14, 17, 17);
+}
+
+.section3 {
+    background-color: lightgray;
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 32px;
+    font-weight: lighter;
+    padding: 40px 80px;
+}
+
+.section3 .quote {
+    margin: 0;
+}
+
+.section3 .author {
+    font-weight: bold;
+    text-align: end;
+    font-style: normal;
+}
+
+.section4 {
+    padding: 20px 50px;
+    background-color: rgb(79, 114, 102);
+    border-radius: 8px;
+    margin: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.subsectionE {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    color: white;
+}
+
+h6 {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+}
+
+.subsectionE p {
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
 }
 
 .footer {
@@ -99,4 +174,10 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
+    margin-bottom: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
